--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,8 +6,8 @@ sonar.projectName=testlab2
 #sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources=app
+#sonar.sources=.
 
 # Encoding of the source code. Default is default system encoding
-sonar.sourceEncoding=UTF-8
+#sonar.sourceEncoding=UTF-8
 
